[package]
name = "rdev-playground"
version = "0.1.0"
authors = ["Helder S Ribeiro <git@agentofuser.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = {version = "0.5.1", features = ["unstable_grab", "serialize"]}
serde_cbor = "0.11.1"